# SensorControl

./: Serial.h  common.h  const.h
anchor/: Makefile  anchorAppC.nc  anchorC.nc  volumes-stm25p.xml
anchor/anchorPC/: 1.csv  Makefile  Makefile.am  Makefile.in  anchorPC.c  cal.h  cal.py  config.status  decisionPacket.c  decisionPacket.h  functions.h  functions.h.gch  gen.py  generate.py  infoPacket.c  infoPacket.h  serialprotocol.h  test.c
anchor/anchorPC/.deps/: anchorPC.Po  decisionPacket.Po  infoPacket.Po  informationPacket.Po  instructionPacket.Po  mySerialListen.Po  prettylisten.Po  seriallistenServer.Po  serialpacket.Po  serialwriteBase.Po
anchor/anchorPC/autom4te.cache/: requests
control/: Makefile  controlAppC.nc  controlC.nc
control/controlPC/: .communicate.h.swp  Makefile  Makefile.am  Makefile.in  communicate.h  config.status  controlPC.c  informationPacket.c  informationPacket.h  instructionPacket.c  instructionPacket.h  serialprotocol.h
control/controlPC/.deps/: controlPC.Po  message.Po  seriallisten.Po  seriallistenBase.Po  sf.Po  sfsend.Po
control/controlPC/autom4te.cache/: output.0
server/: Makefile  serverAppC.nc  serverC.nc
server/serverPC/: .controlPC.c.swp  Makefile  Makefile.am  Makefile.in  communicate.h  config.status  configure  instructionPacket.c  instructionPacket.h  serialpacket.c  serialpacket.h  serialprotocol.h  serverPC.c  test.c
server/serverPC/.deps/: serialsend.Po  serialsource.Po  serverPC.Po  sflisten.Po  sfsource.Po
server/serverPC/autom4te.cache/: requests  traces.0  traces.1
